--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -16,7 +16,7 @@
   </change-notes>
 
   <!-- please see https://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
-  <idea-version since-build="173.0"/>
+  <idea-version since-build="193.0"/>
 
   <!-- please see https://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
        on how to target different products -->
@@ -36,8 +36,14 @@
     <intentionAction>
       <className>com.theblind.privatenotes.action.DeleteNotesIntentionAction</className>
     </intentionAction>
+
+      <psi.treeChangeListener implementation="com.theblind.privatenotes.core.PrivateNotesFileChangeListener"/>
   </extensions>
 
+    <projectListeners>
+        <listener class="com.theblind.privatenotes.core.PrivateNotesFileEditorManagerListener"
+                  topic="com.intellij.openapi.fileEditor.FileEditorManagerListener"/>
+    </projectListeners>
   <actions>
     <group id="Test-Group-id" text="Test-Group" >
     </group>
