--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -9,6 +9,7 @@
        源码是只读文件不能添加注释而烦恼吗？<br>
        <li>在任何你想加注释的地方 按下<em>Alt + Enter</em>鼠标移出点击即可保存</li>
        <li>已有私人注释 按下<em>Alt + Enter</em>即可编辑和删除</li>
+       <img src="https://gitee.com/Lovxy/private-notes/raw/master/doc/show.gif"/>
     ]]></description>
 
 
