--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>TheBlind.privateNotes</id>
     <name>Private Notes</name>
-    <version>1.3</version>
+    <version>1.4</version>
     <vendor email="1043193478@qq.com" url="https://gitee.com/Lovxy">TheBlind</vendor>
 
     <description><![CDATA[
@@ -33,6 +33,10 @@
     ]]></description>
 
     <change-notes><![CDATA[
+      <h3>v1.4 update</h3>
+      <ul>
+          <li>auto wrap</li>
+      </ul>
       <h3>v1.3 update</h3>
       <ul>
           <li>update operation</li>
@@ -76,6 +80,8 @@
 
         <!--行尾拓展-->
         <editor.linePainter implementation="com.theblind.privatenotes.core.listener.PrivateNotesEditorLinePainter"/>
+        <editorFactoryDocumentListener
+                implementation="com.theblind.privatenotes.core.listener.PrivateNotesDocumentListener"/>
         <!--config-->
         <applicationService
                 serviceImplementation="com.theblind.privatenotes.core.service.impl.ConfigServiceImpl$ConfigPersistenceThroughIdea"/>
